наконец то работает учет ингридиентов (они вычитаются из общей массы)

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -792,7 +792,7 @@ ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
     line-height: 60px;
     height: 60px;
     margin: 0;
-    background: #6d84ff;
+    background: #17ff00;
     text-align: center;
 }
 
